--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,9 @@
 {
-    "name": "zym",
+    "name": "geoffreytran/zym",
     "type": "library",
     "description": "The ZYM PHP framework",
     "keywords": ["framework"],
     "homepage": "http://geoffreytran.com/projects/zym",
-    "version": "0.5",
     "license": "BSD",
     "authors": [
         {
@@ -14,9 +13,11 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "symfony/symfony": "2.1.*"
+        "symfony/symfony": "2.2.*"
     },
     "autoload": {
-        "psr-0": { "Zym": "src/" }
+        "psr-0": {
+            "Zym": "src/"
+        }
     }
 }
