--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,9 @@
         }
     ],
     "require": {
-        "php": ">=5.3.2",
+        "php": ">=5.3.3",
         "symfony/symfony": ">=2.1.0",
+        "doctrine/orm": ">=2.3.0",
         "stof/doctrine-extensions-bundle": "dev-master"
     },
     "autoload": {
