--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,12 @@
         "php": ">=5.3.3",
         "symfony/symfony": ">=2.1.0",
         "doctrine/orm": ">=2.3.0",
-        "stof/doctrine-extensions-bundle": "dev-master"
+        "doctrine/doctrine-fixtures-bundle": "2.2.*@dev",
+        "stof/doctrine-extensions-bundle": "1.2.*@dev",
+        
+        "knplabs/knp-menu-bundle": "1.1.*",
+        "knplabs/knp-paginator-bundle": "~2.4",
+        "knplabs/knp-time-bundle": "~1.3"
     },
     "autoload": {
         "psr-0": {
